# rust-playground-cli

./: Cargo.toml  Makefile  README.md
src/: cli.rs  lib.rs  main.rs  modules.rs  types.rs
src/borrow_checker/: methods.rs
src/custom_types/: methods.rs
src/format_print/: methods.rs
src/modules/: control_flow.rs  conversion_traits.rs  custom_types.rs  functions.rs  primitives.rs
src/primitives/: methods.rs
src/structs/: methods.rs
src/testing/: methods.rs
