[package]
name = "rust-playground-cli"
version = "1.0.0"
authors = ["Ben Lu <ayroblu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-playground-cli"
path = "src/main.rs"

# exists because: https://github.com/rust-lang/rust/issues/50784
[lib]
name = "librustplaygroundcli"
path = "src/lib.rs"

[dependencies]
clap = "2.33.1"

